Push fixes to header image and nav close on click of transparent white space

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -2686,6 +2686,8 @@ button, .btn, input[type="submit"] {
       top: -100px;
       left: 0;
       width: 100%; }
+      .page-template-page-campaign-detail-php .page-header.has-image .stellar-container, .page-template-page-campaign-overview-php .page-header.has-image .stellar-container {
+        height: 720px; }
       @media (max-width: 1199px) {
         .page-header.has-image .stellar-container {
           height: 420px;
